--- a/Supervised_Learning_for_Drug_Design_Main.ipynb
+++ b/Supervised_Learning_for_Drug_Design_Main.ipynb
@@ -2886,7 +2886,9 @@
         "#Discussion and Conclusion\n",
         "It appears that my assumption that ensemble methods would perform decently at classifying toxic molecules turned out to be correct, which, again, I presume is because of the high dimension nature of the molecular fingerprint featurization (which ensemble methods are suited to due to their resistance to the curse of dimensionality). \n",
         "\n",
-        "Many of the top performing models on this same dataset from the MoleculeNet benchmark involve more complexity (the best being a convolutional neural network, achieving an ROC AUC of nearly 100%), so I am proud that my relatively simple models were able to achieve scores anywhere near that."
+        "Many of the top performing models on this same dataset from the MoleculeNet benchmark involve more complexity (the best being a convolutional neural network, achieving an ROC AUC of nearly 100%), so I am proud that my relatively simple models were able to achieve scores anywhere near that.",
+        "\n",
+        "If I were to repeat this project, I would want to expand the GridSearchCV to include larger parameters as it seemed that my search wasn't exhaustive enough (but computational limitations made it difficult to expand the search). I would also go back and create models for toxicity on all 12 of the biological targets so as to get a more universal sense of the molecules' levels of toxicity."
       ],
       "metadata": {
         "id": "xUuW71WLlYFy"
